--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>message - manager</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <main>
@@ -53,6 +53,6 @@
     </div>
 
     </main>
-    <script src="/app.js"></script>
+    <script src="/js/app.js"></script>
   </body>
 </html>
